# SoC-based-MatMul-Accelerator-and-DNN-Accelerator

./: README.md  partII_main.cc
eecs298soc/: Matmul_no_op.cpp  Matmul_op.cpp
eecs298soc/.theia/: settings.json
eecs298soc/.wsdata/: clang_dir_map.json
eecs298soc/Lab1/: .cproject  .project  .vitis_hls_log_all.xml  Lab1.xpr  hls.app  vivado.jou
eecs298soc/Matmul_no_op/: .cproject  .project  .vitis_hls_log_all.xml  Matmul_no_op.xpr  hls.app
eecs298soc/Matmul_no_op_1/: Matmul_no_op_1.xpr
eecs298soc/Matmul_op/: .vitis_hls_log_all.xml
eecs298soc/Matmul_op_ver2/: .cproject  .project  .vitis_hls_log_all.xml  hls.app
eecs298soc/Matmul_optimized/: Matmul_optimized.xpr
eecs298soc/hls_component/: compile_commands.json  hls_config.cfg  vitis-comp.json
eecs298soc/matmul_no_op_final_vivado/: matmul_no_op_final_vivado.xpr
eecs298soc/matmul_optimized_final/: matmul_optimized_final.xpr
eecs298soc/matmul_optimized_final/matmul_optimized_final.ip_user_files/sim_scripts/design_1/activehdl/: CMakeLists.txt  README.txt  compile.do  design_1.sh  file_info.txt
eecs298soc/platform/: vitis-comp.json
final_prj/: .cproject  .project  .vitis_hls_log_all.xml  hls.app
final_prj/.apc/: autopilot.apfmapping
final_prj/solution1/: script.tcl  solution1.aps
jupyter/: init.ipynb  testcase_goldenref.ipynb
jupyter/.ipynb_checkpoints/: init-checkpoint.ipynb
jupyter/lenet/: lenet  lenet_python.ipynb
lab1/: Matmul_no_op.cpp
lenet_hls/: lenet_conv1_hls.cpp  lenet_conv3_hls.cpp  lenet_conv5_hls.cpp  lenet_fc6_hls.cpp
letnet_hls/: letnet_conv1_hls.cpp  letnet_conv3_hls.cpp
(+4110 files in other folders)
